--- a/config/templates/inc/_nav.html
+++ b/config/templates/inc/_nav.html
@@ -4,19 +4,33 @@
         {% url 'home' as home_url %}
         <li><a class="nav-link scrollto {% if request.get_full_path == home_url %}active {% endif %}" href="{{ home_url }}#hero">Главная</a></li>
 
-        <li><a class="nav-link scrollto" href="{{ home_url }}#about">About</a></li>
-        <li><a class="nav-link scrollto" href="{{ home_url }}#services">Services</a></li>
-                <li><a class="nav-link scrollto" href="{{ home_url }}#team">Team</a></li>
+        <li><a class="nav-link scrollto" href="{{ home_url }}#about">О сайте</a></li>
 
-        <li><a class="nav-link  scrollto" href="{{ home_url }}#portfolio">Портфолио</a></li>
+        {% comment %}
+        <li><a class="nav-link scrollto" href="{{ home_url }}#services">Services</a></li>
+        <li><a class="nav-link scrollto" href="{{ home_url }}#team">Team</a></li>
         <li><a class="nav-link  scrollto" href="{{ home_url }}#pricing">Price</a></li>
         <li><a class="nav-link  scrollto" href="{{ home_url }}#blog">News</a></li>
+        {% endcomment %}
 
-        <li><a class="nav-link scrollto" href="{% url 'contact' %}">Контакты</a></li>
+        <li><a class="nav-link scrollto" href="{{ home_url }}#portfolio">Портфолио</a></li>
+
+
+        {% url 'contact' as cont %}
+        <li>
+            <a {% if request.get_full_path == cont %}class='nav-link scrollto active' {% endif %} href="{{ cont }}">
+                Контакты
+            </a>
+        </li>
 
         {% url 'blog' as blog_url %}
-        <li><a class="nav-link scrollto {% if blog_url in request.get_full_path %}active {% endif %}" href="{{ blog_url }}">Блог</a></li>
+        <li>
+            <a class="nav-link scrollto {% if blog_url in request.get_full_path %}active {% endif %}" href="{{ blog_url }}">
+                Блог
+            </a>
+        </li>
 
+        {% comment %}
         {% url 'blog' as blog_url %}
         <li class="dropdown">
             <a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -30,7 +44,8 @@
               </li>
               <li><a href="#">Drop Down 2</a></li>
             </ul>
-          </li>
+        </li>
+        {% endcomment %}
 
         {% if not request.user.is_authenticated %}
         {% url 'register' as register_url %}
