--- a/config/templates/inc/_sidebar.html
+++ b/config/templates/inc/_sidebar.html
@@ -23,7 +23,7 @@
             <div class="left-blog">
                 <h4><a class="nav-link active"
                        aria-current="page"
-                       href="{% url 'blog_add_post' %}">Добавить запись</a></h4>
+                       href="{% url 'blog_post_add' %}">Добавить запись</a></h4>
             </div>
         </div>
         {% endif %}
