--- a/config/blog/templates/blog/blog_post_edit.html
+++ b/config/blog/templates/blog/blog_post_edit.html
@@ -25,7 +25,7 @@
                             <form action="{% url 'blog_post_edit' slug=post.slug %}"
                                   method="post">
                                 {% csrf_token %}
-
+                                {{ form.media }}
                                 {{ form.as_p }}
                                 <div class="text-center">
                                     <button type="submit"
