--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -15,6 +15,9 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
 
+    <link href="{% static '/ckeditor/ckeditor/plugins/codesnippet/lib/highlight/styles/default.css' %}" rel="stylesheet">
+    <script src="{% static '/ckeditor/ckeditor/plugins/codesnippet/lib/highlight/highlight.pack.js' %}"></script>
+
   <!-- Vendor CSS Files -->
   <link href="{% static '/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
   <link href="{% static '/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -46,6 +49,8 @@
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <script>hljs.initHighlightingOnLoad();</script>
 
   <!-- Vendor JS Files -->
   <script src="{% static '/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
