--- a/config/blog/templates/blog/contact.html
+++ b/config/blog/templates/blog/contact.html
@@ -17,7 +17,7 @@
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="section-headline text-center">
-                            <h2>Contact us</h2>
+                            <h2>{{ title }}</h2>
                         </div>
                     </div>
                 </div>
@@ -40,8 +40,8 @@
                             <div class="single-icon">
                                 <i class="bi bi-envelope"></i>
                                 <p>
-                                    Email: info@example.com<br>
-                                    <span>Web: www.example.com</span>
+                                    Email: {{ email }}<br>
+                                    <span>Web: {{  logo_name }}</span>
                                 </p>
                             </div>
                         </div>
@@ -52,8 +52,8 @@
                             <div class="single-icon">
                                 <i class="bi bi-geo-alt"></i>
                                 <p>
-                                    Location: A108 Adam Street<br>
-                                    <span>NY 535022, USA</span>
+                                    Уфа<br>
+                                    <span>Респ. Башкортостан</span>
                                 </p>
                             </div>
                         </div>
@@ -77,60 +77,61 @@
                     <!-- Start  contact -->
                     <div class="col-md-6">
                         <div class="form contact-form">
-                            <form action="forms/contact.php"
-                                  method="post"
-                                  role="form"
-                                  class="php-email-form">
-                                <div class="form-group">
+                            <form action='{% url "contact" %}'
+                                  method="post">
+                                {% csrf_token %}
+                                {{ form.non_field_errors }}
+                                <div class="form-group mt-3">
+                                    {{ form.name.errors }}
                                     <input type="text"
-                                           name="name"
                                            class="form-control"
-                                           id="name"
-                                           placeholder="Your Name"
+                                           name="name"
+                                           id="form.name.id_for_input"
+                                           placeholder="{{ form.name.label }}"
                                            required>
                                 </div>
                                 <div class="form-group mt-3">
+                                    <strong>{{ form.email.errors }}</strong>
                                     <input type="email"
                                            class="form-control"
                                            name="email"
-                                           id="email"
-                                           placeholder="Your Email"
+                                           id="form.email.id_for_input"
+                                           placeholder="name@example.com"
                                            required>
                                 </div>
                                 <div class="form-group mt-3">
+                                    {{ form.subject.errors }}
                                     <input type="text"
                                            class="form-control"
                                            name="subject"
-                                           id="subject"
-                                           placeholder="Subject"
+                                           id="{{ form.subject.id_for_input }}"
+                                           placeholder="{{ form.subject.label }}"
                                            required>
                                 </div>
                                 <div class="form-group mt-3">
+                                    {{ form.message.errors }}
                                     <textarea class="form-control"
                                               name="message"
                                               rows="5"
-                                              placeholder="Message"
+                                              placeholder="{{ form.message.label }}"
                                               required></textarea>
                                 </div>
-                                <div class="my-3">
-                                    <div class="loading">Loading</div>
-                                    <div class="error-message"></div>
-                                    <div class="sent-message">Your message has been sent. Thank you!</div>
+                                <div class="form-group mt-3">
+                                    {{ form.copy.errors }}
+                                    <label for="{{ form.copy.id_for_label }}">{{ form.copy.label }}</label>
+                                    <input class="form-check-input"
+                                           type="checkbox"
+                                           id="copy"
+                                           name="copy">
                                 </div>
-                                <div class="text-center">
-                                    <button type="submit">Send Message</button>
+                                <div class="form-group mt-3">
+                                    {{ form.captcha.errors }}
+                                    {{ form.captcha }}
                                 </div>
-                            </form>
-                            <p>
-                            <h3>Обратная связь (в доработке) </h3>
-
-                            <form method="post"
-                                  role="form"
-                                  class="php-email-form">
-                                {% csrf_token %}
-                                {{ form.as_p }}
-                                <div class="text-center">
-                                    <button type="submit">Send</button>
+                                <div class="text-center form-group mt-3">
+                                    <button type="submit"
+                                            class="btn btn-outline-info">Отправить
+                                    </button>
                                 </div>
                             </form>
 
