add title for page 404

--- a/config/blog/templates/404.html
+++ b/config/blog/templates/404.html
@@ -9,6 +9,7 @@
           content="{% block description %} Привет, Мир! Когда накипело получать на свои закладки ошибку 404, решил написать свой блог, чтобы больше не терялись.. {% endblock %}">
     <meta name="keywords"
           content="блог, разработка, администрирование">
+    <title> 404 | Страница не найдена </title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <!-- Template CSS -->
