--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -2,6 +2,22 @@
 {% load static %}
 <html lang="ru">
 <head>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+       m[i].l=1*new Date();
+       for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+       k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+       (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+       ym(85863808, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true
+       });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/85863808" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="{% block description %} Привет, Мир! Когда накипело получать на свои закладки ошибку 404, решил написать свой блог, чтобы больше не терялись.. {% endblock %}">
@@ -56,7 +72,6 @@
   <script src="{% static '/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static '/vendor/glightbox/js/glightbox.min.js' %}"></script>
   <script src="{% static '/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
-  <script src="{% static '/vendor/php-email-form/validate.js' %}"></script>
   <script src="{% static '/vendor/swiper/swiper-bundle.min.js' %}"></script>
 
   <!-- Template Main JS File -->
