--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -23,7 +23,8 @@
        ym(85863808, "init", {
             clickmap:true,
             trackLinks:true,
-            accurateTrackBounce:true
+            accurateTrackBounce:true,
+            webvisor:true
        });
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/85863808" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
